--- a/Spring/SpringBatch/demo-spring-batch/build.gradle
+++ b/Spring/SpringBatch/demo-spring-batch/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.batch:spring-batch-test'
 	testRuntimeOnly 'com.h2database:h2'
+	testImplementation 'org.mockito:mockito-inline'
 }
 
 tasks.named('test') {
