--- a/Spring/SpringSecurity/oauth2/.gitignore
+++ b/Spring/SpringSecurity/oauth2/.gitignore
@@ -4,6 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+volumes/
 
 ### STS ###
 .apt_generated
@@ -25,6 +26,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+application-social.yml
 
 ### NetBeans ###
 /nbproject/private/
